# pulumi-dataproducts-component

./: .gitignore  AUTO-PAUSE-FEATURE.md  CODE-ELEGANCE-REVIEW.md  README.md  REFACTORING-SUMMARY.md  ROBUSTNESS-IMPROVEMENTS.md  SESSION-SUMMARY.md  __main__.py  architecture-diagram.drawio  aspect_config.json  convert_args.py  data_product_dh2_orchestrator.py  dataproduct.py  dataproduct_backup.py  defaults.py  pyproject.toml  schema.json  simple_test.py
dataproducts/: __init__.py  data_product_dh2_orchestrator.py  defaults.py  simple_test.py
docs/: ACTUAL_GAP_ANALYSIS.md  ALIGNMENT_ACTION_PLAN.md  ALIGNMENT_COMPLETE.md  CHANGELOG-v0.0.22.md  CHANGELOG-v0.0.23.md  CLOUD-SCHEDULER-DESIGN.md  CLOUD-SCHEDULER-IMPLEMENTATION.md  COMPONENT-OVERVIEW.md  DATA-QUALITY-ALERTING.md  DATA-QUALITY-QUICK-START.md  MIGRATION_PLAN.md  SECOND-PASS-SUMMARY.md  STANDARDIZED-DATA-QUALITY.md  STRUCTURE_GAP_ANALYSIS.md  TESTING-DATA-QUALITY-ALERTS.md  VALIDATION_REPORT.md  claude.md
scripts/: README.md  quick_check_alerts.bat  setup-cloud-scheduler-iam.sh  test_alerts.ps1  test_dq_alerts.py  test_dq_alerts.sh  validate_aspects.py
tests/: README.md  test_aspect_registry.py  test_component.py  test_orchestrator_standalone.py  validate_code.py
tests/dh2-orchestrator-test/: Pulumi.test.yaml  Pulumi.yaml  __main__.py  requirements.txt
